--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
               src="images/headshot.jpg" alt=""></span>
           <h1 id="title">Lihong Zhao<br>
           </h1>
-          <p>Postdoctoral Fellow<br>
-            Applied Mathematics<br>
-            Univ. of California, Merced<br>
+          <p>Visiting Assistant Professor<br>
+            Department of Mathematics<br>
+            Virginia Tech<br>
           </p>
         </div>
         <!-- Nav -->
@@ -62,8 +62,8 @@
           <li><a href="https://github.com/slihongzhao" class="icon
               brands fa-github" moz-do-not-send="true"><span
                 class="label">Github</span></a></li>
-          <li><a href="mailto:lzhao33@ucmerced.edu" class="icon solid
-              fa-envelope" moz-do-not-send="true"><span class="label">Email</span></a></li>
+          <li><a class="icon solid fa-envelope" moz-do-not-send="true"
+              href="mailto:lhzhao@vt.edu"><span class="label">Email</span></a></li>
         </ul>
       </div>
     </div>
@@ -75,8 +75,11 @@
           <header>
             <h2 class="alt">Welcome!&nbsp; <br>
             </h2>
-            <p align="justify">I am an NSF DIRAC-RTG postdoctoral fellow
-              in the <a moz-do-not-send="true"
+            <p align="justify">I am currently a Visiting Assistant
+              Professor in the <a moz-do-not-send="true"
+                href="https://math.vt.edu/">Department of Mathematics</a>
+              at Virginia Tech. I was formerly an NSF DIRAC-RTG
+              postdoctoral fellow in the <a moz-do-not-send="true"
                 href="https://appliedmath.ucmerced.edu/"> Department of
                 Applied Mathematics</a> at the University of California,
               Merced. In 2022 I was supported by the <a
@@ -126,16 +129,25 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
           <h1>Academic Appointment</h1>
           <div align="left">
             <ul>
-              <li> Postdoctoral Fellow, <a moz-do-not-send="true"
+              <li> Visiting Assistant Professor, <a
+                  moz-do-not-send="true" href="https://math.vt.edu/">Department
+
+
+
+
+
+                  of Mathematics, Virginia Tech</a>, 2023-present<br>
+              </li>
+              <li>Postdoctoral Fellow, <a moz-do-not-send="true"
                   href="https://appliedmath.ucmerced.edu/">Department of
                   Applied Mathematics</a>, University of California,
-                Merced (UC Merced), 2020–present <br>
+                Merced (UC Merced), 2020–2023<br>
                 &nbsp;&nbsp;&nbsp; – AAI Intersect Postdoctoral Fellow,
                 2022–2023 <br>
                 &nbsp;&nbsp;&nbsp; – NSF DIRAC-RTG Postdoctoral
-                Researcher, 2020–2022, 2023-present <br>
+                Researcher, 2020–2022, 2023<br>
                 &nbsp;&nbsp;&nbsp; – Affiliate Member, Health Sciences
-                Research Institute, 2021–present </li>
+                Research Institute, 2021–2023 </li>
               <li>Postdoctoral Fellow, <a moz-do-not-send="true"
                   href="https://imci.uidaho.edu/">Institute for Modeling
                   Collaboration and Innovation (IMCI)</a>, University of
@@ -147,6 +159,12 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
                   href="https://www.researchamerica.org/civic-science/microgrants/">Civic
+
+
+
+
+
+
 
 
 
@@ -221,6 +239,12 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
+
+
+
+
+
                   Intersect Fellowship for Computational Scientists and
                   Immunologists</a>; the American Association of
                 Immunologists (AAI)</div>
@@ -228,6 +252,12 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
 href="https://www.maa.org/programs-and-communities/professional-development/project-next">Mathematical
+
+
+
+
+
+
 
 
 
@@ -360,11 +390,23 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
+
+
+
                     Awarded Fellowship to Support Computation and
                     Immunology Cross-training''</i></a><br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
+
+
+
+
+
 
 
 
@@ -442,6 +484,12 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
+
+
+
                       between Genital Tract Microbiome Dynamics and
                       Chlamydia Infection</a></h3>
                 </header>
@@ -451,6 +499,12 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 <header>
                   <h3><a moz-do-not-send="true"
                       href="http://dx.doi.org/10.1007/s11538-022-01107-2">Modeling
+
+
+
+
+
+
 
 
 
@@ -498,6 +552,12 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 associated with time of <i>Chlamydia</i> infection''. <b><i>Scientific
 
 
+
+
+
+
+
+
                     Reports</i> (2023) 13:9006. doi: <a
                     moz-do-not-send="true"
                     href="https://doi.org/10.1038/s41598-023-36130-3">10.1038/s41598-023-36130-3</a></b></div>
@@ -507,6 +567,12 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                   Childs, Christina Edholm, Joan Ponce, Olivia Prosper,
                   <b><u>Lihong Zhao</u></b>. ``Modeling Immunity to
                   Malaria with an Age-Structured PDE Framework''. <i>SIAM
+
+
+
+
+
+
                     Journal on Applied Mathematics</i> (2023)
                   83(3):1098-1125. doi: </b><a
                   href="https://doi.org/10.1137/21M1464427"
@@ -525,6 +591,12 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
+
+
+
                 85:13. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1007/s11538-022-01107-2">10.1007/s11538-022-01107-2</a>
                 <br>
@@ -532,6 +604,12 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             </li>
             <li>
               <div align="justify">A. Ali Heydari, Oscar A. Davalos, <u><b>Lihong
+
+
+
+
+
+
 
 
 
@@ -673,6 +751,12 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
+
+
+
                   maculata</i> from Hatchling to Adult''. <i>Ecosphere</i>
                 (2017) 8(7): e01840. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1002/ecs2.1840">10.1002/ecs2.1840</a></div>
@@ -688,12 +772,24 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                   href="http://dx.doi.org/10.1007/s10898-016-0489-2">10.1007/s10898-016-0489-2</a></div>
             </li>
           </ul>
-          <h1>Other Articles:</h1>
+          <h1><b>Peer-Reviewed Articles in Proceedings:</b><br>
+          </h1>
           <ul>
             <li>
-              <div align="justify"><u><b>Lihong Zhao</b></u>. ``The
-                Vaginal Microbiota and Its Association with Chlamydia''.
-                SIAM News, December 14, 2022. <a moz-do-not-send="true"
+              <div align="left"><u><b>Lihong Zhao</b></u>, Ruby Kim,
+                Lucy S. Oremland, Mukti Chowkwale, Lisette G. de Pillis,
+                and Heather Z. Brooks. ''A survey of mathematical
+                modeling of hormonal contraception and the menstrual
+                cycle''. </div>
+            </li>
+          </ul>
+          <h1><b>Other Articles:</b><br>
+          </h1>
+          <ul>
+            <li>
+              <div align="left"><u><b>Lihong Zhao</b></u>. ``The Vaginal
+                Microbiota and Its Association with Chlamydia''. SIAM
+                News, December 14, 2022. <a moz-do-not-send="true"
 href="https://sinews.siam.org/Details-Page/the-vaginal-microbiota-and-its-association-with-chlamydia">[link]</a></div>
             </li>
             <li>
@@ -707,113 +803,122 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
             </li>
           </ul>
           <h1>Under Review:</h1>
-          <div align="justify">
+          <div align="left">
             <ul>
-              <li><u><b>Lihong Zhao</b></u>, Ruby Kim, Lucy S. Oremland,
-                Mukti Chowkwale, Lisette G. de Pillis, and Heather Z.
-                Brooks. ''A survey of mathematical modeling of hormonal
-                contraception and the menstrual cycle''.</li>
+              <li>Susana Tejeda-Garibay, <u><b>Lihong Zhao</b></u>,
+                Nicholas Hum, Maria Pimentel, Anh L. Diep, Dina R.
+                Weilhammer, Gabriela G. Loots, Katrina K. Hoyer. ``In
+                vitro Inhibition of <i>Coccidioides</i> Growth by the
+                Tracheal and Intestinal Microbiomes''.<br>
+              </li>
             </ul>
           </div>
           <ul>
           </ul>
-        </div>
-      </section>
-      <!-- Teaching -->
-      <section id="teaching" class="two">
-        <div class="container">
-          <header>
-            <h2>Teaching</h2>
-          </header>
-          <h1 align="justify">Instructor of Record:</h1>
-          <div align="justify">
-            <ul>
-              <li>
-                <div>Mathematical Modeling (MATH 1<b>5</b>0), UC
-                  Merced&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Spring 2023</div>
-              </li>
-              <li>
-                <div>Probability and Statistics (MATH 32), UC
-                  Merced&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; Fall
-                  2020, Spring 2021, Fall 2021</div>
-              </li>
-              <li>
-                <div>Elementary and Intermediate Algebra (MATH 92), UL
-                  Lafayette&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                  &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;
-                  Spring 2012</div>
-              </li>
-            </ul>
-          </div>
-          <h1 align="justify">Co-organizer and Instructor of Record:</h1>
-          <div align="justify">
-            <ul>
-              <li>
-                <div>Workshop “<a moz-do-not-send="true"
-                    href="https://slihongzhao.github.io/2020-02-27-uidaho/">R
-                    for Reproducible Science</a>”(BCB 503-02),
-                  UI&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                  &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;
-                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                  &nbsp;&nbsp;&nbsp; &nbsp; Feb. 27-28, 2020</div>
-              </li>
-            </ul>
-          </div>
-          <h1 align="justify">Graduate Teaching Assistant</h1>
-          <ul>
-            <li>
-              <div align="justify">Survey of Calculus (MATH 250), UL
-                Lafayette&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;
-                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                Spring 2013</div>
-            </li>
-            <li>
-              <div align="justify">College Algebra Fundamentals (MATH
-                100), UL Lafayette&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                &nbsp; &nbsp; &nbsp; Fall 2012<br>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <!-- Contact -->
-      <section id="contact" class="four">
-        <div class="container">
-          <header>
-            <h2>Contact</h2>
-          </header>
-          <div class="row">
-            <div class="col-4 col-12-mobile">
-              <article class="item"> <a href="#" class="image fit"><img
-                    src="images/uc-merced-econ-impact.jpg" alt=""></a> </article>
-            </div>
-            <div class="col-8 col-12-mobile">
-              <p align="center">Office: ACS 329<br>
-                5200 North Lake Road<br>
-                University of California, Merced<br>
-                Merced, CA 95340<br>
-                Email:<font size="+2"> lzhao33 (at) ucmerced (dot) edu</font><br>
-              </p>
-            </div>
-          </div>
         </div>
       </section>
     </div>
+    <!-- Teaching -->
+    <section id="teaching" class="two">
+      <div class="container">
+        <header>
+          <h2>Teaching</h2>
+        </header>
+        <h1 align="justify">Instructor of Record:</h1>
+        <div align="justify">
+          <ul>
+            <li>
+              <div>Preparation for Calculus (Math 1214), Virginia
+                Tech&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
+
+                &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; Fall 2023<br>
+              </div>
+            </li>
+            <li>
+              <div>Mathematical Modeling (MATH 1<b>5</b>0), UC
+                Merced&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                Spring 2023</div>
+            </li>
+            <li>
+              <div>Probability and Statistics (MATH 32), UC
+                Merced&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; Fall 2020,
+                Spring 2021, Fall 2021</div>
+            </li>
+            <li>
+              <div>Elementary and Intermediate Algebra (MATH 92), UL
+                Lafayette&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; Spring 2012</div>
+            </li>
+          </ul>
+        </div>
+        <h1 align="justify">Co-organizer and Instructor of Record:</h1>
+        <div align="justify">
+          <ul>
+            <li>
+              <div>Workshop “<a moz-do-not-send="true"
+                  href="https://slihongzhao.github.io/2020-02-27-uidaho/">R
+                  for Reproducible Science</a>”(BCB 503-02),
+                UI&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp; Feb. 27-28, 2020</div>
+            </li>
+          </ul>
+        </div>
+        <h1 align="justify">Graduate Teaching Assistant</h1>
+        <ul>
+          <li>
+            <div align="justify">Survey of Calculus (MATH 250), UL
+              Lafayette&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+              Spring 2013</div>
+          </li>
+          <li>
+            <div align="justify">College Algebra Fundamentals (MATH
+              100), UL Lafayette&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+              &nbsp; &nbsp; &nbsp; Fall 2012<br>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- Contact -->
+    <section id="contact" class="four">
+      <div class="container">
+        <header>
+          <h2>Contact</h2>
+        </header>
+        <div class="row">
+          <div class="col-4 col-12-mobile">
+            <article class="item"> <br>
+            </article>
+          </div>
+          <div class="col-8 col-12-mobile">
+            <p align="center">Office: McBryde 554<br>
+              460 McBryde Hall, Virginia Tech<br>
+              225 Stanger Street<br>
+              Blacksburg, VA 24061-1026<br>
+              Email:<font size="+2"> lhzhao (at) vt (dot) edu</font><br>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Footer -->
     <div id="footer">
       <!-- Copyright -->
