--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
                   of Mathematics, Virginia Tech</a>, 2023-present<br>
               </li>
               <li>Postdoctoral Fellow, <a moz-do-not-send="true"
@@ -159,6 +160,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
                   href="https://www.researchamerica.org/civic-science/microgrants/">Civic
+
 
 
 
@@ -245,6 +247,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
                   Intersect Fellowship for Computational Scientists and
                   Immunologists</a>; the American Association of
                 Immunologists (AAI)</div>
@@ -252,6 +255,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
 href="https://www.maa.org/programs-and-communities/professional-development/project-next">Mathematical
+
 
 
 
@@ -396,11 +400,13 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                     Awarded Fellowship to Support Computation and
                     Immunology Cross-training''</i></a><br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
 
 
 
@@ -490,6 +496,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                       between Genital Tract Microbiome Dynamics and
                       Chlamydia Infection</a></h3>
                 </header>
@@ -499,6 +506,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 <header>
                   <h3><a moz-do-not-send="true"
                       href="http://dx.doi.org/10.1007/s11538-022-01107-2">Modeling
+
 
 
 
@@ -558,6 +566,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                     Reports</i> (2023) 13:9006. doi: <a
                     moz-do-not-send="true"
                     href="https://doi.org/10.1038/s41598-023-36130-3">10.1038/s41598-023-36130-3</a></b></div>
@@ -567,6 +576,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                   Childs, Christina Edholm, Joan Ponce, Olivia Prosper,
                   <b><u>Lihong Zhao</u></b>. ``Modeling Immunity to
                   Malaria with an Age-Structured PDE Framework''. <i>SIAM
+
 
 
 
@@ -597,6 +607,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                 85:13. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1007/s11538-022-01107-2">10.1007/s11538-022-01107-2</a>
                 <br>
@@ -604,6 +615,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             </li>
             <li>
               <div align="justify">A. Ali Heydari, Oscar A. Davalos, <u><b>Lihong
+
 
 
 
@@ -757,6 +769,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                   maculata</i> from Hatchling to Adult''. <i>Ecosphere</i>
                 (2017) 8(7): e01840. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1002/ecs2.1840">10.1002/ecs2.1840</a></div>
@@ -822,7 +835,7 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
     <section id="teaching" class="two">
       <div class="container">
         <header>
-          <h2>Teaching</h2>
+          <h2 align="center">Teaching</h2>
         </header>
         <h1 align="justify">Instructor of Record:</h1>
         <div align="justify">
@@ -830,6 +843,7 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
             <li>
               <div>Preparation for Calculus (Math 1214), Virginia
                 Tech&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 
 
 
@@ -901,15 +915,17 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
     <section id="contact" class="four">
       <div class="container">
         <header>
-          <h2>Contact</h2>
+          <h2 align="left">Contact</h2>
         </header>
         <div class="row">
           <div class="col-4 col-12-mobile">
-            <article class="item"> <br>
-            </article>
+            <article class="item"> <img
+src="https://www.vt.edu/content/vt_edu/en/about/locations/buildings/mcbryde-hall/_jcr_content/content/adaptiveimage_1455662709234.transform/m-medium/image.jpg"
+                alt="McBryde Hall" moz-do-not-send="true" width="292"
+                height="227"> </article>
           </div>
           <div class="col-8 col-12-mobile">
-            <p align="center">Office: McBryde 554<br>
+            <p align="left">Office: McBryde 554<br>
               460 McBryde Hall, Virginia Tech<br>
               225 Stanger Street<br>
               Blacksburg, VA 24061-1026<br>
