--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
                   of Mathematics, Virginia Tech</a>, 2023-present<br>
               </li>
               <li>Postdoctoral Fellow, <a moz-do-not-send="true"
@@ -160,6 +161,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
                   href="https://www.researchamerica.org/civic-science/microgrants/">Civic
+
 
 
 
@@ -248,6 +250,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
                   Intersect Fellowship for Computational Scientists and
                   Immunologists</a>; the American Association of
                 Immunologists (AAI)</div>
@@ -255,6 +258,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
 href="https://www.maa.org/programs-and-communities/professional-development/project-next">Mathematical
+
 
 
 
@@ -401,11 +405,13 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                     Awarded Fellowship to Support Computation and
                     Immunology Cross-training''</i></a><br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
 
 
 
@@ -497,6 +503,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                       between Genital Tract Microbiome Dynamics and
                       Chlamydia Infection</a></h3>
                 </header>
@@ -506,6 +513,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 <header>
                   <h3><a moz-do-not-send="true"
                       href="http://dx.doi.org/10.1007/s11538-022-01107-2">Modeling
+
 
 
 
@@ -567,6 +575,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                     Reports</i> (2023) 13:9006. doi: <a
                     moz-do-not-send="true"
                     href="https://doi.org/10.1038/s41598-023-36130-3">10.1038/s41598-023-36130-3</a></b></div>
@@ -576,6 +585,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                   Childs, Christina Edholm, Joan Ponce, Olivia Prosper,
                   <b><u>Lihong Zhao</u></b>. ``Modeling Immunity to
                   Malaria with an Age-Structured PDE Framework''. <i>SIAM
+
 
 
 
@@ -608,6 +618,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                 85:13. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1007/s11538-022-01107-2">10.1007/s11538-022-01107-2</a>
                 <br>
@@ -615,6 +626,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             </li>
             <li>
               <div align="justify">A. Ali Heydari, Oscar A. Davalos, <u><b>Lihong
+
 
 
 
@@ -770,6 +782,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                   maculata</i> from Hatchling to Adult''. <i>Ecosphere</i>
                 (2017) 8(7): e01840. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1002/ecs2.1840">10.1002/ecs2.1840</a></div>
@@ -847,6 +860,7 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
 
 
 
+
                 &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; Fall 2023<br>
               </div>
             </li>
@@ -915,17 +929,17 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
     <section id="contact" class="four">
       <div class="container">
         <header>
-          <h2 align="left">Contact</h2>
+          <h2 align="center">Contact</h2>
         </header>
         <div class="row">
-          <div class="col-4 col-12-mobile">
+          <div class="col-4 col-12-mobile" align="center">
             <article class="item"> <img
 src="https://www.vt.edu/content/vt_edu/en/about/locations/buildings/mcbryde-hall/_jcr_content/content/adaptiveimage_1455662709234.transform/m-medium/image.jpg"
                 alt="McBryde Hall" moz-do-not-send="true" width="292"
                 height="227"> </article>
           </div>
           <div class="col-8 col-12-mobile">
-            <p align="left">Office: McBryde 554<br>
+            <p align="center">Office: McBryde 554<br>
               460 McBryde Hall, Virginia Tech<br>
               225 Stanger Street<br>
               Blacksburg, VA 24061-1026<br>
