--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
               src="images/headshot.jpg" alt=""></span>
           <h1 id="title">Lihong Zhao<br>
           </h1>
-          <p>Visiting Assistant Professor<br>
+          <p>Assistant Professor<br>
             Department of Mathematics<br>
-            Virginia Tech<br>
+            Kennesaw State University<br>
           </p>
         </div>
         <!-- Nav -->
@@ -63,7 +63,7 @@
               brands fa-github" moz-do-not-send="true"><span
                 class="label">Github</span></a></li>
           <li><a class="icon solid fa-envelope" moz-do-not-send="true"
-              href="mailto:lhzhao@vt.edu"><span class="label">Email</span></a></li>
+              href="mailto:lzhao12@kennesaw.edu"><span class="label">Email</span></a></li>
         </ul>
       </div>
     </div>
@@ -75,11 +75,19 @@
           <header>
             <h2 class="alt">Welcome!&nbsp; <br>
             </h2>
-            <p align="justify">I am currently a Visiting Assistant
-              Professor in the <a moz-do-not-send="true"
-                href="https://math.vt.edu/">Department of Mathematics</a>
-              at Virginia Tech. I was formerly an NSF DIRAC-RTG
-              postdoctoral fellow in the <a moz-do-not-send="true"
+            <p align="justify">I am currently a <font size="+2">tenure-track</font>
+              Assistant Professor in the <a moz-do-not-send="true"
+                href="https://www.kennesaw.edu/csm/academics/mathematics/index.php">Department
+
+
+                of Mathematics</a> at Kennesaw State University. Prior
+              to this, I was a Visiting Assistant Profess in the <a
+                moz-do-not-send="true" href="https://math.vt.edu/">Department
+
+
+                of Mathematics</a> at Virginia Tech. I was formerly an
+              NSF DIRAC-RTG postdoctoral fellow in the <a
+                moz-do-not-send="true"
                 href="https://appliedmath.ucmerced.edu/"> Department of
                 Applied Mathematics</a> at the University of California,
               Merced. In 2022 I was supported by the <a
@@ -138,6 +146,11 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
+
+
+
+
                   of Mathematics, Virginia Tech</a>, 2023-present<br>
               </li>
               <li>Postdoctoral Fellow, <a moz-do-not-send="true"
@@ -161,6 +174,11 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
                   href="https://www.researchamerica.org/civic-science/microgrants/">Civic
+
+
+
+
+
 
 
 
@@ -251,6 +269,11 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
+
+
+
+
                   Intersect Fellowship for Computational Scientists and
                   Immunologists</a>; the American Association of
                 Immunologists (AAI)</div>
@@ -258,6 +281,11 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
 href="https://www.maa.org/programs-and-communities/professional-development/project-next">Mathematical
+
+
+
+
+
 
 
 
@@ -406,11 +434,21 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
+
+
                     Awarded Fellowship to Support Computation and
                     Immunology Cross-training''</i></a><br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
+
+
+
+
 
 
 
@@ -504,6 +542,11 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
+
+
                       between Genital Tract Microbiome Dynamics and
                       Chlamydia Infection</a></h3>
                 </header>
@@ -513,6 +556,11 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 <header>
                   <h3><a moz-do-not-send="true"
                       href="http://dx.doi.org/10.1007/s11538-022-01107-2">Modeling
+
+
+
+
+
 
 
 
@@ -544,8 +592,10 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
               <article class="item"> <a href="#" class="image fit"><img
                     src="images/WiMB_OC.png" alt=""></a>
                 <header>
-                  <h3>Modeling the Effectiveness of Dosing Regimens of
-                    Oral Hormonal Contraceptives</h3>
+                  <h3><a moz-do-not-send="true"
+                      href="http://dx.doi.org/10.1007/978-3-031-58516-6">Modeling
+                      the Effectiveness of Dosing Regimens of Oral
+                      Hormonal Contraceptives</a></h3>
                 </header>
               </article>
             </div>
@@ -562,10 +612,26 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
           </h1>
           <ul>
             <li>
+              <div align="left">Susana Tejeda-Garibay, <u><b>Lihong
+                    Zhao</b></u>, Nicholas Hum, Maria Pimentel, Anh L.
+                Diep, Beheshta Amiri, Suzanne Sindi, Dina R. Weilhammer,
+                Gabriela G. Loots, Katrina K. Hoyer. ``Host tracheal and
+                intestinal microbiomes inhibit <i>Coccidioides</i>
+                growth <i>in vitro</i>''. <i>Microbiology Spectrum</i>
+                (2024) e02978-23. doi: <a moz-do-not-send="true"
+                  href="http://dx.doi.org/10.1128/spectrum.02978-23">10.1128/spectrum.02978-23</a>
+              </div>
+            </li>
+            <li>
               <div align="left"><b><u>Lihong Zhao</u></b>, Stephanie R.
                 Lundy, Francis O. Eko, Joeseph U. Igietseme, Yusuf O.
                 Omosun. ``Genital tract microbiome dynamics are
                 associated with time of <i>Chlamydia</i> infection''. <b><i>Scientific
+
+
+
+
+
 
 
 
@@ -585,6 +651,11 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                   Childs, Christina Edholm, Joan Ponce, Olivia Prosper,
                   <b><u>Lihong Zhao</u></b>. ``Modeling Immunity to
                   Malaria with an Age-Structured PDE Framework''. <i>SIAM
+
+
+
+
+
 
 
 
@@ -619,6 +690,11 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
+
+
                 85:13. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1007/s11538-022-01107-2">10.1007/s11538-022-01107-2</a>
                 <br>
@@ -626,6 +702,11 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             </li>
             <li>
               <div align="justify">A. Ali Heydari, Oscar A. Davalos, <u><b>Lihong
+
+
+
+
+
 
 
 
@@ -783,6 +864,11 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
+
+
                   maculata</i> from Hatchling to Adult''. <i>Ecosphere</i>
                 (2017) 8(7): e01840. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1002/ecs2.1840">10.1002/ecs2.1840</a></div>
@@ -806,7 +892,13 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 Lucy S. Oremland, Mukti Chowkwale, Lisette G. de Pillis,
                 and Heather Z. Brooks. ''A survey of mathematical
                 modeling of hormonal contraception and the menstrual
-                cycle''. </div>
+                cycle''. <i>Mathematical Modeling for Women’s Health -
+                  Collaborative Workshop for Women in Mathematical
+                  Biology</i> (eds. Ashlee N. Ford Versypt, Rebecca A.
+                Segal, Suzanne S. Sindi) (2024) Pages 51-82. Cham:
+                Springer Nature Switzerland. doi: <a
+                  moz-do-not-send="true"
+                  href="http://dx.doi.org/10.1007/978-3-031-58516-6">10.1007/978-3-031-58516-6</a></div>
             </li>
           </ul>
           <h1><b>Other Articles:</b><br>
@@ -831,11 +923,10 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
           <h1>Under Review:</h1>
           <div align="left">
             <ul>
-              <li>Susana Tejeda-Garibay, <u><b>Lihong Zhao</b></u>,
-                Nicholas Hum, Maria Pimentel, Anh L. Diep, Dina R.
-                Weilhammer, Gabriela G. Loots, Katrina K. Hoyer. ``In
-                vitro Inhibition of <i>Coccidioides</i> Growth by the
-                Tracheal and Intestinal Microbiomes''.<br>
+              <li>Zhuolin Qu, Denis Patterson, <u><b>Lihong Zhao</b></u>,
+                Joan Ponce, Christina Edholm, Olivia F.~Prosper Feldman,
+                Lauren M.~Childs. ``Mathematical modeling of malaria
+                vaccination with seasonality and immune feedback''.<br>
               </li>
             </ul>
           </div>
@@ -845,17 +936,37 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
       </section>
     </div>
     <!-- Teaching -->
-    <section id="teaching" class="two">
+    <section id="teaching" class="three">
       <div class="container">
         <header>
           <h2 align="center">Teaching</h2>
         </header>
-        <h1 align="justify">Instructor of Record:</h1>
-        <div align="justify">
+        <h1 align="center">Instructor of Record:</h1>
+        <div align="center">
           <ul>
             <li>
-              <div>Preparation for Calculus (Math 1214), Virginia
+              <div>College Algebra (MATH 1111), Kennesaw State
+                University&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp; Fall 2024</div>
+            </li>
+            <li>
+              <div>Introduction to Differential Equations (MATH 2214),
+                Virginia Tech &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; Spring 2024<br>
+              </div>
+            </li>
+            <li>
+              <div>Preparation for Calculus (MATH1214), Virginia
                 Tech&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+
+
+
+
 
 
 
@@ -887,8 +998,8 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
             </li>
           </ul>
         </div>
-        <h1 align="justify">Co-organizer and Instructor of Record:</h1>
-        <div align="justify">
+        <h1 align="center">Co-organizer and Instructor of Record:</h1>
+        <div align="center">
           <ul>
             <li>
               <div>Workshop “<a moz-do-not-send="true"
@@ -901,21 +1012,23 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
             </li>
           </ul>
         </div>
-        <h1 align="justify">Graduate Teaching Assistant</h1>
+        <h1 align="center">Graduate Teaching Assistant</h1>
         <ul>
           <li>
-            <div align="justify">Survey of Calculus (MATH 250), UL
-              Lafayette&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;
-              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-              &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-              Spring 2013</div>
+            <div align="center">
+              <div>Survey of Calculus (MATH 250), UL
+                Lafayette&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                Spring 2013</div>
+            </div>
           </li>
           <li>
-            <div align="justify">College Algebra Fundamentals (MATH
-              100), UL Lafayette&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+            <div align="center">College Algebra Fundamentals (MATH 100),
+              UL Lafayette&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
               &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
               &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
               &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
@@ -933,17 +1046,26 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
         </header>
         <div class="row">
           <div class="col-4 col-12-mobile" align="center">
+            <article class="item"> </article>
+          </div>
+          <div class="col-4 col-12-mobile" align="center">
             <article class="item"> <img
 src="https://www.vt.edu/content/vt_edu/en/about/locations/buildings/mcbryde-hall/_jcr_content/content/adaptiveimage_1455662709234.transform/m-medium/image.jpg"
                 alt="McBryde Hall" moz-do-not-send="true" width="292"
                 height="227"> </article>
           </div>
+          <div class="col-4 col-12-mobile" align="center">
+            <article class="item"> </article>
+          </div>
           <div class="col-8 col-12-mobile">
-            <p align="center">Office: McBryde 554<br>
-              460 McBryde Hall, Virginia Tech<br>
-              225 Stanger Street<br>
-              Blacksburg, VA 24061-1026<br>
-              Email:<font size="+2"> lhzhao (at) vt (dot) edu</font><br>
+            <div class="col-4 col-12-mobile" align="center">
+              <article class="item"> </article>
+            </div>
+            <p align="right">Office: R2 331<br>
+              Kennesaw State University, Marietta Campus<br>
+              1100 South Marietta Pkwy<br>
+              Marietta, GA 30060<br>
+              Email:<font size="+2"> lzhao12 (at) kennesaw (dot) edu</font><br>
             </p>
           </div>
         </div>
