--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
                 href="https://www.kennesaw.edu/csm/academics/mathematics/index.php">Department
 
 
+
                 of Mathematics</a> at Kennesaw State University. Prior
               to this, I was a Visiting Assistant Profess in the <a
                 moz-do-not-send="true" href="https://math.vt.edu/">Department
+
 
 
                 of Mathematics</a> at Virginia Tech. I was formerly an
@@ -137,7 +139,15 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
           <h1>Academic Appointment</h1>
           <div align="left">
             <ul>
-              <li> Visiting Assistant Professor, <a
+              <li> Assistant Professor, <a moz-do-not-send="true"
+                  href="https://www.kennesaw.edu/csm/academics/mathematics/index.php">Department
+
+
+
+                  of Mathematics</a>, Kennesaw State University,
+                2024-present<br>
+              </li>
+              <li>Visiting Assistant Professor, <a
                   moz-do-not-send="true" href="https://math.vt.edu/">Department
 
 
@@ -151,7 +161,8 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
-                  of Mathematics, Virginia Tech</a>, 2023-present<br>
+
+                  of Mathematics, Virginia Tech</a>, 2023-2024<br>
               </li>
               <li>Postdoctoral Fellow, <a moz-do-not-send="true"
                   href="https://appliedmath.ucmerced.edu/">Department of
@@ -174,6 +185,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
                   href="https://www.researchamerica.org/civic-science/microgrants/">Civic
+
 
 
 
@@ -274,6 +286,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
                   Intersect Fellowship for Computational Scientists and
                   Immunologists</a>; the American Association of
                 Immunologists (AAI)</div>
@@ -281,6 +294,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
 href="https://www.maa.org/programs-and-communities/professional-development/project-next">Mathematical
+
 
 
 
@@ -439,11 +453,13 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                     Awarded Fellowship to Support Computation and
                     Immunology Cross-training''</i></a><br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
 
 
 
@@ -547,6 +563,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                       between Genital Tract Microbiome Dynamics and
                       Chlamydia Infection</a></h3>
                 </header>
@@ -556,6 +573,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 <header>
                   <h3><a moz-do-not-send="true"
                       href="http://dx.doi.org/10.1007/s11538-022-01107-2">Modeling
+
 
 
 
@@ -594,6 +612,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 <header>
                   <h3><a moz-do-not-send="true"
                       href="http://dx.doi.org/10.1007/978-3-031-58516-6">Modeling
+
                       the Effectiveness of Dosing Regimens of Oral
                       Hormonal Contraceptives</a></h3>
                 </header>
@@ -642,6 +661,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                     Reports</i> (2023) 13:9006. doi: <a
                     moz-do-not-send="true"
                     href="https://doi.org/10.1038/s41598-023-36130-3">10.1038/s41598-023-36130-3</a></b></div>
@@ -651,6 +671,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                   Childs, Christina Edholm, Joan Ponce, Olivia Prosper,
                   <b><u>Lihong Zhao</u></b>. ``Modeling Immunity to
                   Malaria with an Age-Structured PDE Framework''. <i>SIAM
+
 
 
 
@@ -695,6 +716,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                 85:13. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1007/s11538-022-01107-2">10.1007/s11538-022-01107-2</a>
                 <br>
@@ -702,6 +724,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             </li>
             <li>
               <div align="justify">A. Ali Heydari, Oscar A. Davalos, <u><b>Lihong
+
 
 
 
@@ -869,6 +892,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                   maculata</i> from Hatchling to Adult''. <i>Ecosphere</i>
                 (2017) 8(7): e01840. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1002/ecs2.1840">10.1002/ecs2.1840</a></div>
@@ -962,6 +986,7 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
             <li>
               <div>Preparation for Calculus (MATH1214), Virginia
                 Tech&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 
 
 
