--- a/index.html
+++ b/index.html
@@ -183,6 +183,14 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
           <h1>Selected Awards</h1>
           <ul>
             <li>
+              <div align="left"> American Institute of Mathematics (AIM)
+                Structured Quartet Research Ensembles (SQuaRE), with
+                Atkins, Case, Huijben, Saucedo, and Ponce; ``Modeling
+                insecticide resistance and management with populations
+                genetics and control theory'', 2023<br>
+              </div>
+            </li>
+            <li>
               <div align="justify"><a moz-do-not-send="true"
                   href="https://www.researchamerica.org/civic-science/microgrants/">Civic
 
@@ -218,7 +226,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             </li>
             <li>
               <div align="justify">Convergence Accelerator Team Award,
-                with Childs, Edholm, Patterson, Ponce, Prosper, and Qu ;
+                with Childs, Edholm, Patterson, Ponce, Prosper, and Qu;
                 the NSF-Simons Center for Multiscale Cell Fate Research,
                 University of California, Irvine (UC Irvine), 2022</div>
             </li>
@@ -408,6 +416,11 @@ href="https://www.coursera.org/account/accomplishments/certificate/ZPQTD8GSH8JT"
             </ul>
             <h1 align="center">Media</h1>
             <ul>
+              <li><a moz-do-not-send="true"
+href="https://www.siam.org/publications/siam-news/articles/ordinary-differential-equation-model-investigates-the-dynamics-of-legionnaires-disease"><i>"Ordinary
+                    Differential Equation Model Investigates the
+                    Dynamics of Legionnaires' Disease"</i></a><br>
+              </li>
               <li><a moz-do-not-send="true"
 href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-support-computation-and-immunology-cross-training"><i>''Postdoc
 
