--- a/index.html
+++ b/index.html
@@ -81,9 +81,11 @@
 
 
 
+
                 of Mathematics</a> at Kennesaw State University. Prior
               to this, I was a Visiting Assistant Profess in the <a
                 moz-do-not-send="true" href="https://math.vt.edu/">Department
+
 
 
 
@@ -144,11 +146,13 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
                   of Mathematics</a>, Kennesaw State University,
                 2024-present<br>
               </li>
               <li>Visiting Assistant Professor, <a
                   moz-do-not-send="true" href="https://math.vt.edu/">Department
+
 
 
 
@@ -221,6 +225,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
                   Engagement Microgrant, Research!America</a>, 2022<br>
               </div>
             </li>
@@ -233,6 +238,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
 href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fellowships-for-computational-scientists-and-immunologists">2022
+
 
 
 
@@ -364,6 +370,7 @@ href="https://www.maa.org/programs-and-communities/professional-development/proj
 
 
 
+
                   Association of America (MAA) Project NExT Fellowship</a>,
                 2021<br>
               </div>
@@ -418,6 +425,7 @@ href="https://www.coursera.org/account/accomplishments/certificate/ZPQTD8GSH8JT"
             <ul>
               <li><a moz-do-not-send="true"
 href="https://www.siam.org/publications/siam-news/articles/ordinary-differential-equation-model-investigates-the-dynamics-of-legionnaires-disease"><i>"Ordinary
+
                     Differential Equation Model Investigates the
                     Dynamics of Legionnaires' Disease"</i></a><br>
               </li>
@@ -467,11 +475,13 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                     Awarded Fellowship to Support Computation and
                     Immunology Cross-training''</i></a><br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
 
 
 
@@ -577,6 +587,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                       between Genital Tract Microbiome Dynamics and
                       Chlamydia Infection</a></h3>
                 </header>
@@ -586,6 +597,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 <header>
                   <h3><a moz-do-not-send="true"
                       href="http://dx.doi.org/10.1007/s11538-022-01107-2">Modeling
+
 
 
 
@@ -625,6 +637,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 <header>
                   <h3><a moz-do-not-send="true"
                       href="http://dx.doi.org/10.1007/978-3-031-58516-6">Modeling
+
 
                       the Effectiveness of Dosing Regimens of Oral
                       Hormonal Contraceptives</a></h3>
@@ -675,6 +688,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                     Reports</i> (2023) 13:9006. doi: <a
                     moz-do-not-send="true"
                     href="https://doi.org/10.1038/s41598-023-36130-3">10.1038/s41598-023-36130-3</a></b></div>
@@ -684,6 +698,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                   Childs, Christina Edholm, Joan Ponce, Olivia Prosper,
                   <b><u>Lihong Zhao</u></b>. ``Modeling Immunity to
                   Malaria with an Age-Structured PDE Framework''. <i>SIAM
+
 
 
 
@@ -709,6 +724,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 ``Modeling and Global Sensitivity Analysis of Strategies
                 to Mitigate COVID-19 Transmission on a Structured
                 College Campus''. <i>Bulletin of Mathematical Biology </i>(2023)
+
 
 
 
@@ -811,6 +827,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                     Zhao</b></u>, Katrina K. Hoyer, Suzanne S. Sindi.
                 ``ACTIVA: realistic single-cell RNA-seq generation with
                 automatic cell-type identification using introspective
@@ -832,6 +849,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             <li>
               <div align="justify">Karyn L. Sutton, <u><b>Lihong Zhao</b></u>,
                 Jacoby Carter. ``The Estimation of Growth Dynamics for <i>Pomacea
+
 
 
 
@@ -1010,6 +1028,7 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
 
 
 
+
                 &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; Fall 2023<br>
               </div>
             </li>
@@ -1088,8 +1107,8 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
           </div>
           <div class="col-4 col-12-mobile" align="center">
             <article class="item"> <img
-src="https://www.vt.edu/content/vt_edu/en/about/locations/buildings/mcbryde-hall/_jcr_content/content/adaptiveimage_1455662709234.transform/m-medium/image.jpg"
-                alt="McBryde Hall" moz-do-not-send="true" width="292"
+src="https://www.kennesaw.edu/csm/_ldp/.private_ldp/a376666/production/master/36f34455-ec51-4152-b1c6-dace3cbc2a6a.jpg"
+                alt="Math Building" moz-do-not-send="true" width="292"
                 height="227"> </article>
           </div>
           <div class="col-4 col-12-mobile" align="center">
