--- a/index.html
+++ b/index.html
@@ -82,9 +82,15 @@
 
 
 
+
+
+
                 of Mathematics</a> at Kennesaw State University. Prior
               to this, I was a Visiting Assistant Profess in the <a
                 moz-do-not-send="true" href="https://math.vt.edu/">Department
+
+
+
 
 
 
@@ -147,11 +153,17 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
+
+
                   of Mathematics</a>, Kennesaw State University,
                 2024-present<br>
               </li>
               <li>Visiting Assistant Professor, <a
                   moz-do-not-send="true" href="https://math.vt.edu/">Department
+
+
+
 
 
 
@@ -226,6 +238,9 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
+
+
                   Engagement Microgrant, Research!America</a>, 2022<br>
               </div>
             </li>
@@ -238,6 +253,9 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
 href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fellowships-for-computational-scientists-and-immunologists">2022
+
+
+
 
 
 
@@ -371,6 +389,9 @@ href="https://www.maa.org/programs-and-communities/professional-development/proj
 
 
 
+
+
+
                   Association of America (MAA) Project NExT Fellowship</a>,
                 2021<br>
               </div>
@@ -426,6 +447,9 @@ href="https://www.coursera.org/account/accomplishments/certificate/ZPQTD8GSH8JT"
               <li><a moz-do-not-send="true"
 href="https://www.siam.org/publications/siam-news/articles/ordinary-differential-equation-model-investigates-the-dynamics-of-legionnaires-disease"><i>"Ordinary
 
+
+
+
                     Differential Equation Model Investigates the
                     Dynamics of Legionnaires' Disease"</i></a><br>
               </li>
@@ -476,11 +500,17 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
                     Awarded Fellowship to Support Computation and
                     Immunology Cross-training''</i></a><br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
+
+
 
 
 
@@ -588,6 +618,9 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
                       between Genital Tract Microbiome Dynamics and
                       Chlamydia Infection</a></h3>
                 </header>
@@ -597,6 +630,9 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 <header>
                   <h3><a moz-do-not-send="true"
                       href="http://dx.doi.org/10.1007/s11538-022-01107-2">Modeling
+
+
+
 
 
 
@@ -637,6 +673,9 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 <header>
                   <h3><a moz-do-not-send="true"
                       href="http://dx.doi.org/10.1007/978-3-031-58516-6">Modeling
+
+
+
 
 
                       the Effectiveness of Dosing Regimens of Oral
@@ -689,6 +728,9 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
                     Reports</i> (2023) 13:9006. doi: <a
                     moz-do-not-send="true"
                     href="https://doi.org/10.1038/s41598-023-36130-3">10.1038/s41598-023-36130-3</a></b></div>
@@ -698,6 +740,9 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                   Childs, Christina Edholm, Joan Ponce, Olivia Prosper,
                   <b><u>Lihong Zhao</u></b>. ``Modeling Immunity to
                   Malaria with an Age-Structured PDE Framework''. <i>SIAM
+
+
+
 
 
 
@@ -724,6 +769,9 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 ``Modeling and Global Sensitivity Analysis of Strategies
                 to Mitigate COVID-19 Transmission on a Structured
                 College Campus''. <i>Bulletin of Mathematical Biology </i>(2023)
+
+
+
 
 
 
@@ -828,6 +876,9 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
                     Zhao</b></u>, Katrina K. Hoyer, Suzanne S. Sindi.
                 ``ACTIVA: realistic single-cell RNA-seq generation with
                 automatic cell-type identification using introspective
@@ -849,6 +900,9 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             <li>
               <div align="justify">Karyn L. Sutton, <u><b>Lihong Zhao</b></u>,
                 Jacoby Carter. ``The Estimation of Growth Dynamics for <i>Pomacea
+
+
+
 
 
 
@@ -1029,6 +1083,9 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
 
 
 
+
+
+
                 &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; Fall 2023<br>
               </div>
             </li>
@@ -1107,7 +1164,7 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
           </div>
           <div class="col-4 col-12-mobile" align="center">
             <article class="item"> <img
-src="https://www.kennesaw.edu/csm/_ldp/.private_ldp/a376666/production/master/36f34455-ec51-4152-b1c6-dace3cbc2a6a.jpg"
+src="https://localist-images.azureedge.net/photos/34158135813915/card@2x/348edf6889f16ada2f06ea1d7f3933add91018f9.jpg"
                 alt="Math Building" moz-do-not-send="true" width="292"
                 height="227"> </article>
           </div>
@@ -1118,9 +1175,9 @@ src="https://www.kennesaw.edu/csm/_ldp/.private_ldp/a376666/production/master/36
             <div class="col-4 col-12-mobile" align="center">
               <article class="item"> </article>
             </div>
-            <p align="right">Office: R2 331<br>
-              Kennesaw State University, Marietta Campus<br>
-              1100 South Marietta Pkwy<br>
+            <p align="right">Office: E 228<br>
+              846 Polytechnic Lane <br>
+              Kennesaw State University <br>
               Marietta, GA 30060<br>
               Email:<font size="+2"> lzhao12 (at) kennesaw (dot) edu</font><br>
             </p>
